# toy_mips_emu

./: .gitignore  Cargo.toml  README.md  Trunk.toml  gh-pages.sh  index.html  mips_emu.js  mips_emulator_gui.js  server.py  todo.md  web.sh
mips_emulator/: Cargo.toml
mips_emulator/examples/mips_assembler/: main.rs
mips_emulator/examples/mips_dump/: main.rs
mips_emulator/src/: chip.rs  lib.rs  mem.rs
mips_emulator_gui/: Cargo.toml
mips_emulator_gui/src/: display.rs  gui.rs  lib.rs  main.rs  timer.rs  util.rs
mips_emulator_gui/src/gui/: assembler.rs  display.rs  memory.rs  registers.rs
program/: bitmap_example_simple.asm  build.sh  common_macros.asm  friend.asm  lfsr_rainbow.asm
src/: bresenham.rs  chip.rs  display.rs  gui.rs  lib.rs  main.rs
www/: index.html  mips_emu_bg.js  server.py  sw.js
