[package]
name = "mips_emu"
version = "0.1.0"
authors = ["V360 <v360code@gmail.com>"]
edition = "2021"

[dependencies]
eframe = { version = "0.16.0", default-features = false, features = ["egui_glium"] }
# minifb = "0.20.0"
# minifb = { git = "https://github.com/dc740/rust_minifb.git", branch = "wasm_websys_wip" }
# font8x8 = "0.3"
