[package]
name = "mips_emu"
version = "0.1.0"
authors = ["V360 <v360code@gmail.com>"]
edition = "2021"

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.16", default-features = false, features = ["egui_glium"] }
# eframe = { git = "https://github.com/emilk/egui", branch = "master", default-features = false, features = ["egui_glium"] }

[profile.release]
opt-level = 2
