[package]
name = "mips_emulator_gui"
version = "0.1.0"
authors = ["V360 <v360code@gmail.com>"]
edition = "2021"

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
mips_emulator = { path = "../mips_emulator" }
eframe = { version = "0.21.3", default-features = false, features = [ 'wgpu' ] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4"
