[package]
name = "mips_emulator_gui"
version = "0.1.0"
authors = ["V360 <v360code@gmail.com>"]
edition = "2021"

[lib]
crate_type = ["cdylib", "rlib"]

[dependencies]
mips_emulator = { path = "../mips_emulator" }
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [ 'glow' ] }
log = "0.4"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
simple_logger = { version = "4.2.0", default-features = false, features = ["stderr"] }
# not using the other logger because it seems to have performance problems

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
